CHANGES IN VERSION 1.7.1
------------------------
 o add vp parameter to set viewport of vennpie on top of upsetplot by user request <2015-10-26, Mon>
   + see http://ygc.name/2015/07/28/upsetplot-in-chipseeker/#comment-19470
 o getBioRegion function <2015-10-20, Tue>
   + see https://github.com/GuangchuangYu/ChIPseeker/issues/16

CHANGES IN VERSION 1.7.0
------------------------
 o BioC 3.3 branch
 
CHANGES IN VERSION 1.5.11
------------------------
 o remove ellipsis parameter in enrichPeakOverlap function and extend it to support GRanges objects <2015-10-08, Thu>
    + see https://support.bioconductor.org/p/73069/
 o fixed the issue, https://github.com/GuangchuangYu/ChIPseeker/issues/13 <2015-10-05, Mon>
 o update GEO info, now contains >18,000 bed file information <2015-09-24, Thu>
 
CHANGES IN VERSION 1.5.10
------------------------
 o dropAnno function, eg. drop nearest gene annotation that far from TSS (>10k). <2015-09-17, Thu>
   + see https://github.com/GuangchuangYu/ChIPseeker/issues/9
   + add parameter distanceToTSS_cutoff to enrichAnnoOverlap
 o use base::subset in plotDistToTSS instead of subsetting data within geom_bar <2015-09-17, Thu>
   + see https://github.com/hadley/ggplot2/issues/1295
   + subset parameter in layer will be removed in next release of ggplot2.
 
CHANGES IN VERSION 1.5.9
------------------------
 o bug fixed of enrichAnnoOverlap <2015-08-26, Wed>
 o change parameter order.matrix to order.by in upsetplot to meet the change of UpSetR pkg <2015-08-26, Wed>
 
CHANGES IN VERSION 1.5.8
------------------------
 o better implementation of getFirstHitIndex.  <2015-07-29, Wed>
   + contributed by Herve Pages.
   + see https://support.bioconductor.org/p/70432/#70545.
 
CHANGES IN VERSION 1.5.7
------------------------
 o add vennpie parameter in upsetplot <2015-07-20, Mon>
 o upsetplot function for csAnno object <2015-07-20, Mon>
 
CHANGES IN VERSION 1.5.6
------------------------
 o update citation info <2015-07-09, Thu>