@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/addGeneAnno.R
-\name{addGeneAnno}
-\alias{addGeneAnno}
-\title{addGeneAnno}
+\name{getGeneAnno}
+\alias{getGeneAnno}
+\title{getGeneAnno}
 \usage{
-addGeneAnno(annoDb, geneID, type)
+getGeneAnno(annoDb, geneID, type)
 }
 \arguments{
 \item{annoDb}{annotation package}
@@ -17,7 +17,7 @@ addGeneAnno(annoDb, geneID, type)
 data.frame
 }
 \description{
-add gene annotation, symbol, gene name etc.
+get gene annotation, symbol, gene name etc.
 }
 \author{
 G Yu
